objects/ASI_CRM_Issue_Zone__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_UOM3__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottles</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Urgency_for_Reply__c</fullName>
        <label>Urgency for Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_VN_Status_Img__c</fullName>
        <formula>CASE(ASI_CRM_Status__c , 
&quot;Open&quot;, IMAGE(&quot;/resource/ASI_CRM_CN_publisher_1&quot;,&quot;Next Step&quot;, 30, 500),
&quot;Closed&quot;, IMAGE(&quot;/resource/ASI_CRM_CN_Issue_Closed&quot;,&quot;Closed&quot;, 30, 500), 
&quot;Open-Picture Uploaded&quot;, IMAGE(&quot;/resource/ASI_CRM_CN_publisher_2&quot;,&quot;Next Step&quot;, 30, 500), 
&quot;Investigating&quot;, IMAGE(&quot;/resource/ASI_CRM_CN_Issue_Investigating&quot;,&quot;Investigating&quot;, 30, 500),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vol_Size2__c</fullName>
        <label>Vol Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70cl</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>6L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Vol_Size3__c</fullName>
        <label>Vol Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70cl</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>6L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Distributor_Contact_Person__c</fullName>
        <label>WS/Distributor Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_Distributor_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WS/Outlet Involved</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issues (WS/Distributor Involved)</relationshipLabel>
        <relationshipName>Issue_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WeChat_ID__c</fullName>
        <label>WeChat ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Where_did_the_bottle_seen__c</fullName>
        <label>Where did the bottle seen?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Rear Stockroom</fullName>
                </value>
                <value>
                    <fullName>Shelf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_detail_information__c</fullName>
        <label>Detail information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_provide_affected_product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Willingness to provide affected product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_website_content__c</fullName>
        <label>What&apos;s the website content?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_WS_Distributor_Contact_Info__c</fullName>
        <label>WS/Distributor Contact Info.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asi_crm_Vol_Size__c</fullName>
        <label>Vol Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>70cl</fullName>
                </value>
                <value>
                    <fullName>1L</fullName>
                </value>
                <value>
                    <fullName>1.5L</fullName>
                </value>
                <value>
                    <fullName>3L</fullName>
                </value>
                <value>
                    <fullName>4.5L</fullName>
                </value>
                <value>
                    <fullName>6L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All_Issue</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ASI_CRM_WeChat_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Issue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Conflict_with_Trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Conflict_with_Trade</value>
        </filters>
        <label>Conflict with Trade</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Consumer_Complaint</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Consumer_Complaint</value>
        </filters>
        <label>Consumer Complaint</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Counterfeit</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Counterfeit</value>
        </filters>
        <label>Counterfeit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>External_GMA</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_External_GMA</value>
        </filters>
        <label>External GMA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Image_Outlet_Execution</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Image_Outlet_Execution</value>
        </filters>
        <label>Image Outlet Execution</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Internal_GMA</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Internal_GMA</value>
        </filters>
        <label>Internal GMA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Look_alike</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Look_alike</value>
        </filters>
        <label>Look-alike</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Issue</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Issue</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Others</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Others</value>
        </filters>
        <label>Others</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Traceability</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Traceability</value>
        </filters>
        <label>Traceability</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Trade_Complaint</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Issue_Raised_Date__c</columns>
        <columns>ASI_CRM_Issue_Type__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Issue_Zone__c.ASI_CRM_CN_Trade_Complaint</value>
        </filters>
        <label>Trade Complaint</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Iss-{0000000}</displayFormat>
        <label>Issue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Conflict_with_Trade</fullName>
        <active>true</active>
        <label>Conflict with Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Consumer_Complaint</fullName>
        <active>true</active>
        <label>Consumer Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Counterfeit</fullName>
        <active>true</active>
        <label>Counterfeit</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_External_GMA</fullName>
        <active>true</active>
        <label>External GMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Image_Outlet_Execution</fullName>
        <active>true</active>
        <label>Image Outlet Execution</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Internal_GMA</fullName>
        <active>true</active>
        <label>Internal GMA</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Look_alike</fullName>
        <active>true</active>
        <label>Look-alike</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_QR_Code_Sticker</fullName>
        <active>true</active>
        <label>QR Code Sticker</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_QR_Code_Sticker_SV</fullName>
        <active>true</active>
        <label>QR Code Sticker (SV)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_QR_Code_Stiker_PRQR</fullName>
        <active>true</active>
        <label>QR Code Sticker (PRQR)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Service_Complaint</fullName>
        <active>true</active>
        <label>Service Complaint</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Traceability</fullName>
        <active>true</active>
        <label>Traceability</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Trade_Complaint</fullName>
        <active>true</active>
        <label>Trade Complaint</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_NUMBER_CHECKING</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(NOT(ISBLANK(ASI_CRM_Qty__c)),NOT(ISNUMBER(  ASI_CRM_Qty__c ))), AND(NOT(ISBLANK(ASI_CRM_Qty2__c)),NOT(ISNUMBER(  ASI_CRM_Qty2__c ))), AND(NOT(ISBLANK(ASI_CRM_Qty3__c)),NOT(ISNUMBER(  ASI_CRM_Qty3__c ))), AND(NOT(ISBLANK(ASI_CRM_Bottles_Sighted1__c)),NOT(ISNUMBER(  ASI_CRM_Bottles_Sighted1__c ))),AND(NOT(ISBLANK(ASI_CRM_Bottles_Sighted2__c)),NOT(ISNUMBER(  ASI_CRM_Bottles_Sighted2__c ))), AND(NOT(ISBLANK(ASI_CRM_Bottles_Sighted3__c)),NOT(ISNUMBER(  ASI_CRM_Bottles_Sighted3__c ))))</errorConditionFormula>
        <errorMessage>Allow only numbers for # Bottles Sighted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Receipt_Required_for_Consumer_Complaint</fullName>
        <active>false</active>
        <errorConditionFormula>AND( RecordType.Name = &apos;Consumer Complaint&apos;,ASI_CRM_Receipt_Y_N__c = False)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Receipt_Y_N__c</errorDisplayField>
        <errorMessage>Receipt is Required</errorMessage>
    </validationRules>
</CustomObject>